[package]
name = "server-node-rust"
version = "0.1.0"
authors = ["Fernando Marca Magalhães <59258828+fernandomarca@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "server_node_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8.0"
